--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,6 +8,7 @@
   font-family: $primary-font, $default-font;
   list-style: none;
   margin: 0;
+  outline: 0;
   padding: 0;
   text-decoration: none;
 }
