--- a/src/pages/login/styles.module.scss
+++ b/src/pages/login/styles.module.scss
@@ -92,15 +92,14 @@
 }
 
 .link {
+  border-radius: 0.25rem;
   color: #ffffff;
   font-weight: bold;
   text-decoration: none;
-  transition: 0.15s color;
+  transition: box-shadow 0.15s, color 0.15s;
 
   &:focus-visible {
-    border-radius: 0.25rem;
     box-shadow: 0 0 0 0.25rem $primary-color;
-    outline: 0;
     text-decoration: underline;
   }
 
